# RAG-api

./: .dockerignore  .gitignore  ARCHITECTURE_REPORT.md  BUILD_PLAN.md  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 00f0b3cd6c11_expand_multi_agent_schema.py  281c2b6eb360_add_allowed_departments_and_content_.py  6405ca633c91_initial_migration.py  64af42714f0e_add_stage_timings_to_querylog.py  bc8940c3a6d2_add_content_hash_to_documents.py
api/apps/agents/: __init__.py  mcp_server.py  models.py
api/apps/auth/: models.py  routers.py  schemas.py  services.py
api/apps/documents/: models.py  routers.py  schemas.py  services.py  tasks.py
api/apps/health/: models.py  routers.py  schemas.py  services.py
api/apps/rag/: models.py  routers.py  schemas.py  (+1 more)
api/config/: settings.py
api/core/: cache.py  celery_app.py  config.py  dependencies.py  embeddings.py  langfuse_client.py  llm.py  query_clarifier.py  semantic_router.py  vector_store.py
api/db/: base_model.py  database.py  session.py
api/utils/: exception_handlers.py  exceptions.py  logger.py  markdown_splitter.py  metrics.py  pdf_parser.py  pipeline_timer.py  responses.py  security.py
frontend/: app.js  index.html  style.css
scripts/: convert_to_pdf.py  seed.py  sync_db.py  test_router.py  test_upload.py
tests/: test_dim.py  test_embed.py  test_new_models.py  test_permissions_schema.py  test_pinecone.py  test_pipeline_timer.py  test_router.py  test_update_permissions.py
tests/integration/: test_dept_isolation.py
(+5 files in other folders)
